fixed few bugs, error handler complete & added swagger doc
